--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="text">
         <div class="container" style="width:90%">
             <center>
-                <b class="flow-text">ANALISIS: MODEL MATEMATIS PREDATOR-PREY TANAMAN PADI DAN TIKUS DI KARAWANG</b>
+                <b class="flow-text">DASHBOARD SIMULASI INTERAKTIF BERBASIS WEB DALAM ANALISIS DINAMIKA PREDATOR-PREY PADA TANAMAN PADI DAN TIKUS DI KARAWANG</b>
                 <br>
                 <br> 
                 <b>Parameter :</b>
